@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 1.05
+    - added encode param (boolean) to augment encodes param (string of chars to encode)
     - encoding now takes place within _process instead of delegating to HTML::AutoTag
     - require HTML::AutoTag v1.02
     - mktable: added sep to list of skipped params (is this safe?)
